  (Patch # 548 - Kevin Leblanc)

- Support for negative line spacing (Patch #535 - Makarius)

- Fix bug #3671: autodetect text file encoding in HelpViewer
  (patch #540 - Eric Le Lay)
  
- Fix bug #3881, non-capturing lookahead in regex search didn't work.
  (Dale Anson)

- Fix bug #3184: File browser completion dives into wrong directory
  (Eric Le Lay)

}}}
{{{ UI Improvements

- Scalable GUI for tip-of-the-day (Makarius)

- Scalable ColorWell icon according to UI font (Makarius)

- Proper L&F font for syntax style table (Patch #558 - Makarius)

- Proper row height default for JTable, JTree with 4K displays
  (Patches #557, #559, #562, #563 - Makarius)

- More font size choices for 4K and higher-res displays (Patch# 549 - Makarius)

- EOL marker character is a localizable property (view.eolMarkerChar),
  and an arrow (↩) instead of period (.) (#3902 - Alan Ezust)

- Proper button margins for Nimbus L&F (Patch #538 - Makarius)

- Floating dockables as JDialog (Patch #537 - Makarius)

- CompletionPopup should accept TAB for completion selection
  (Patch # 525 - Jakub Holý)

- Separated sorting of Buffer Sets and Buffer Switcher (Dale Anson)

- Font properties were not applied after change in Appearances settings
  (Bug #3919 - Dale Anson)

- Allow columns to be rearranged in FSB (Feature request 489, 40, and old
  tracker 1442812 - Dale Anson)

- Align gutter numbers with lines when using additional vertical line spacing.
  (Bug #3717 - Dale Anson)

- Added option to hide open files from recent file list (FR #481 - Dale Anson)

- UI adjustment to allow adding new mode files by point and click.
  (FR # 471 - Dale Anson)

}}}
{{{ Miscellaneous

- New Korean translation file (Patch #551 - yaraba)

- Resize performance improvement (Patch #547 - Sergey Mashkov)

- Properties are sorted when saved (Feature Request #342, Patch #536 - Makarius)

- Configure the JUnit task to fork off the Ant process, with manually adding the